fixes #11: align attachment sizes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -243,3 +243,17 @@
 .NewNoteButton i {
   color: var(--icon-color);
 }
+
+.Attachments {
+  display: flex;
+  padding: 5px 10px;
+  margin: 5px 15px;
+  color: var(--text-color);
+}
+
+.AttachmentName {
+  flex: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 0 5px;
+}
